--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
     <meta property="og:image:secure_url" content="https://scontent.fhan5-11.fna.fbcdn.net/v/t1.6435-9/94884162_2990548140988456_1045232140326797312_n.png?_nc_cat=111&ccb=1-7&_nc_sid=174925&_nc_ohc=Kvi7CKX1O_QAX9VWAtu&_nc_ht=scontent.fhan5-11.fna&oh=00_AfDw3VrDKNLun3FlDO1KDQT6q7Og2ceqIIiHcq1IIJuEMw&oe=6412AFC0"/>
 <meta property="og:description" content="Hãy trở thành những mảnh ghép tiếp theo của đại gia đình chúng mình"/>
 
-<link rel="icon"  type="image/png" href="http://localhost:3000/static/media/pclogo.798d43bc.png">
+<link rel="icon"  type="image/png" href="%PUBLIC_URL%/ava.png">
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
